<resources>

    <!-- NEW ALARM ACTIVITY -->
    <string name="activity_new_alarm_title_new_alarm">New Alert</string>
    <string name="activity_new_alarm_title_edit_alarm">Edit Alert</string>
    <string name="activity_new_alarm_optional_note">Optional note&#8230;</string>


    <!--HOME ACTIVITY-->
    <string name="title_alarms">Alerts</string>
    <string name="title_market">Market</string>
    <string name="title_coins">Coins</string>
    <string name="title_favorites">Favorite Coins</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>


    <!-- COIN DETAIL ACTIVITY -->
    <string name="activity_coin_detail_title_basic_info">Basic Info</string>
    <string name="activity_coin_detail_title_chart">Price Chart</string>
    <string name="activity_coin_detail_title_alerts">Alerts</string>
    <string name="activity_coin_detail_title_exchanges">Top Exchanges</string>

    <string name="activity_coin_detail_basic_rank">Rank</string>
    <string name="activity_coin_detail_basic_market_cap">Market Cap</string>
    <string name="activity_coin_detail_basic_volume">Volume (24h)</string>
    <string name="activity_coin_detail_basic_circulating_supply">Circulating Supply</string>
    <string name="activity_coin_detail_basic_total_supply">Total Supply</string>

    <string name="activity_coin_detail_line1_format">"<![CDATA[<font color='#%7$s'>%1$c%2$s%3$.8f %4$s (%1$c%5$.2f%%)</font> for %6$s]]>"</string>
    <string name="activity_coin_detail_line2_format">"<![CDATA[Low: <font color='#%1$s'>%2$s%3$.8f %4$s</font> ~ High: <font color='#%5$s'>%6$s%7$.8f %8$s</font>]]>"</string>


    <string name="activity_coin_detail_exchange_header_number">#</string>
    <string name="activity_coin_detail_exchange_header_name">Exchange</string>
    <string name="activity_coin_detail_exchange_header_pair">Pair</string>
    <string name="activity_coin_detail_exchange_header_price">Price</string>
    <string name="activity_coin_detail_exchange_header_volume">Volume (24h)</string>


    <!--MARKET FRAGMENT-->
    <string name="fragment_market_total_title">Total Market Capitalization</string>
    <string name="fragment_market_dominance_title">Market Dominance</string>


    <!--COINS FRAGMENT-->
    <string name="fragment_coins_added_to_favorites">%1$s added to Favorites</string>
    <string name="fragment_coins_removed_from_favorites">%1$s removed from Favorites</string>
    <string name="fragment_coins_header_title_name">Name</string>
    <string name="fragment_coins_header_title_price">Price</string>
    <string name="fragment_coins_header_title_markets">M.Cap</string>
    <string name="fragment_coins_header_title_volume">Vol</string>
    <string name="fragment_coins_header_title_1h">1h</string>
    <string name="fragment_coins_header_title_24h">24h</string>
    <string name="fragment_coins_header_title_7d">7d</string>
    <string name="fragment_coins_header_sort_symbol">▼</string>


    <!--PREFERENCE FRAGMENT-->
    <string name="fragment_preference_category_settings_title">App settings</string>
    <string name="fragment_preference_default_currency_key" translatable="false">settings_default_currency</string>
    <string name="fragment_preference_default_currency_title">Default Currency</string>

    <string name="fragment_preference_start_fragment_key" translatable="false">settings_start_fragment</string>
    <string name="fragment_preference_start_fragment_title">Start Page</string>


    <string name="fragment_preference_alarm_frequency_key" translatable="false">settings_alarm_frequency</string>
    <string name="fragment_preference_alarm_frequency_title">Alert frequency</string>

    <string name="fragment_preference_backup_key" translatable="false">settings_backup</string>
    <string name="fragment_preference_backup_title">Backup</string>
    <string name="fragment_preference_backup_summary">Configure app data backup options</string>

    <string name="fragment_preference_category_about_title">About</string>
    <string name="fragment_preference_about_key" translatable="false">settings_about</string>
    <string name="fragment_preference_about_title">About</string>
    <string name="fragment_preference_about_summary">Check app version, developer info&#8230;</string>
    <string name="fragment_preference_rate_key" translatable="false">settings_rate</string>
    <string name="fragment_preference_rate_title">Rate Crypto Master</string>
    <string name="fragment_preference_rate_summary">Like this app? A 5-star rating is gladly appreciated</string>
    <string name="fragment_preference_contact_key" translatable="false">settings_contact</string>
    <string name="fragment_preference_contact_title">Contact developer</string>
    <string name="fragment_preference_contact_summary">Having trouble using this app? Questions? Email me at alejandro@alejandrobicelis.com.ve</string>


    <!-- ALARM ACTIVITY -->
    <string name="activity_alarm_success_enabling_alarm">enabled</string>
    <string name="activity_alarm_success_disabling_alarm">disabled</string>

    <!-- ABOUT ACTIVITY -->
    <string name="activity_about_toolbar_title">About</string>
    <string name="activity_about_version">Version %1$s</string>
    <string name="activity_about_author" translatable="false">Alejandro Bicelis %1$d</string>
    <string name="activity_about_market_link">Rate app</string>
    <string name="activity_about_github_link">View GitHub Project</string>
    <string name="activity_about_website_link" translatable="false">www.alejandrobicelis.com.ve</string>

    <!--DIALOG COLOR PICKER-->
    <string name="dialog_color_picker_title">Pick a color</string>


    <!-- LINKS -->
    <string name="url_market" translatable="false">market://details?id=ve.com.abicelis.cryptomaster</string>
    <string name="url_github" translatable="false">github.com/abicelis/</string>
    <string name="url_website" translatable="false">www.alejandrobicelis.com.ve</string>
    <string name="address_email" translatable="false">alejandro@alejandrobicelis.com.ve</string>


    <!-- CHARTS -->
    <string name="chart_loading">Loading&#8230;</string>
    <string name="chart_error">Could not load data.</string>
    <string name="chart_button_24h">24H</string>
    <string name="chart_button_7d">7D</string>
    <string name="chart_button_1m">1M</string>
    <string name="chart_button_3m">3M</string>
    <string name="chart_button_1y">1Y</string>
    <string name="chart_button_all">ALL</string>


    <!--ENUM COINS TO FETCH-->
    <string name="coins_to_fetch_top_50">Top 50 Coins</string>
    <string name="coins_to_fetch_top_100">Top 100 Coins</string>
    <string name="coins_to_fetch_top_500">Top 500 Coins</string>
    <string name="coins_to_fetch_all">All Coins</string>

    <!--ENUM ALARM TYPE-->
    <string name="alarm_type_above">Above</string>
    <string name="alarm_type_below">Below</string>
    <string name="alarm_type_above_description">Price goes above</string>
    <string name="alarm_type_below_description">Price goes below</string>
    <string name="alarm_type_above_description_2">went above</string>
    <string name="alarm_type_below_description_2">went below</string>


    <!--ENUM APP THEME TYPE-->
    <string name="app_theme_type_light">Light</string>
    <string name="app_theme_type_dark">Dark</string>

    <!--ENUM CHART TIME SPAN-->
    <string name="chart_time_span_24h">1 day</string>
    <string name="chart_time_span_7d">1 week</string>
    <string name="chart_time_span_1m">1 month</string>
    <string name="chart_time_span_3m">3 months</string>
    <string name="chart_time_span_1y">1 year</string>
    <string name="chart_time_span_all">all time</string>


    <!--ENUM TIME FORMAT-->
    <string name="time_format_24">24h</string>
    <string name="time_format_12">12h</string>
    
    

    <!-- COIN SEARCH VIEW -->
    <string name="view_coin_search_title_base">Base</string>
    <string name="view_coin_search_title_pair">Pair</string>
    <string name="view_coin_search_title_price">Price</string>
    <string name="view_coin_search_title_optional">Optional</string>
    <string name="view_coin_search_title_optional_color">Color</string>
    <string name="view_coin_search_idle_text">Select a coin&#8230;</string>
    <string name="view_coin_search">Search a coin&#8230;</string>

    <!-- DIALOG -->
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_search">SEARCH</string>
    <string name="dialog_done">DONE</string>
    <string name="dialog_set">SET</string>
    <string name="dialog_select">SELECT</string>
    <string name="dialog_agree">AGREE</string>
    <string name="dialog_skip">SKIP</string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_discard">DISCARD</string>
    <string name="dialog_delete">DELETE</string>
    <string name="dialog_save">SAVE</string>


    <!--MISC-->
    <string name="app_name">Crypto Master</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_image">No Image</string>
    <string name="notification_snooze">SNOOZE</string>


    <!--MESSAGES-->
    <string name="error_unexpected">Unexpected error, please report this error</string>
    <string name="coin_fragment_type_missing">Missing COIN FRAGMENT TYPE argument, using NORMAL</string>
    <string name="coin_detail_coin_id_missing">Missing COIN ID extra</string>
    <string name="could_not_fetch_fresh_coin_data">No internet, showing local coin data</string>
    <string name="could_not_fetch_quote">Could not fetch quote price</string>
    <string name="could_not_fetch_coin_data">Could not fetch coin data</string>
    <string name="could_not_fetch_chart_data">Could not fetch chart data</string>
    <string name="could_not_fetch_exchange_data">Could not fetch list of exchanges</string>
    <string name="could_not_fetch_alarm_data">Could not fetch list of alerts</string>
    <string name="could_not_insert_alarm">Could not insert alert</string>
    <string name="could_not_update_alarm">Could not update alert</string>
    <string name="could_not_delete_alarm">Could not delete alert</string>
    <string name="success_inserting_alarm">Alert created successfully</string>
    <string name="success_updating_alarm">Alert updated successfully</string>
    <string name="duplicate_quote_base_coin">Quote coin must be different than base coin</string>
    <string name="duplicate_base_quote_coin">Base coin must be different than quote coin</string>
</resources>
