<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_fragment_coins_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_fragment_coins_top_50"
            android:title="@string/coins_to_fetch_top_50"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_fragment_coins_top_100"
            android:title="@string/coins_to_fetch_top_100"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_fragment_coins_top_500"
            android:title="@string/coins_to_fetch_top_500"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_fragment_coins_all"
            android:title="@string/coins_to_fetch_all"
            app:showAsAction="never"/>
    </group>
</menu>