<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="?android:attr/selectableItemBackground"
    android:padding="8dp">


    <TextView
        android:id="@+id/list_item_exchange_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_light"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/activity_coin_detail_exchange_header_number"
        android:textColor="?attr/text_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.07"
        android:paddingEnd="2dp"/>

    <TextView
        android:id="@+id/list_item_exchange_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/activity_coin_detail_exchange_header_name"
        android:ellipsize="end"
        android:textColor="?attr/text_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/list_item_exchange_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/list_item_exchange_pair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/activity_coin_detail_exchange_header_pair"
        android:textColor="?attr/text_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/list_item_exchange_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.23"
        />

    <TextView
        android:id="@+id/list_item_exchange_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/activity_coin_detail_exchange_header_price"
        android:textSize="12sp"
        android:textColor="?attr/text_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/list_item_exchange_pair"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />

    <TextView
        android:id="@+id/list_item_exchange_vol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/activity_coin_detail_exchange_header_volume"
        android:textSize="12sp"
        android:textColor="?attr/text_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/list_item_exchange_price"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2" />



</android.support.constraint.ConstraintLayout>

