<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_coin_header_container"
    android:layout_width="match_parent"
    android:layout_height="38dp"
    android:padding="8dp">



    <TextView
        android:id="@+id/fragment_coin_header_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="?attr/text_secondary"
        android:text="@string/fragment_coins_header_title_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2"
        />

    <TextView
        android:id="@+id/fragment_coin_header_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="?attr/text_secondary"
        android:text="@string/fragment_coins_header_title_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_coin_header_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.2"
        />

    <TextView
        android:id="@+id/fragment_coin_header_mcap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="?attr/text_secondary"
        android:text="@string/fragment_coins_header_title_marketcap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_coin_header_price"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:id="@+id/fragment_coin_header_vol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="?attr/text_secondary"
        android:text="@string/fragment_coins_header_title_volume"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_coin_header_mcap"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.15"

        />

    <TextView
        android:id="@+id/fragment_coin_header_1h"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="?attr/text_secondary"
        android:text="@string/fragment_coins_header_title_1h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_coin_header_vol"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1" />

    <TextView
        android:id="@+id/fragment_coin_header_24h"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="?attr/text_secondary"
        android:text="@string/fragment_coins_header_title_24h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_coin_header_1h"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1" />

    <TextView
        android:id="@+id/fragment_coin_header_7d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="?attr/text_secondary"
        android:text="@string/fragment_coins_header_title_7d"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_coin_header_24h"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1" />


</android.support.constraint.ConstraintLayout>

