<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?attr/default_foreground"
    app:cardCornerRadius="5dp"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:id="@+id/activity_coin_detail_main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/activity_coin_detail_main_price_fiat_symbol"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_light"
            android:layout_gravity="bottom"
            android:text="$"
            android:textColor="?attr/text_primary"
            android:textSize="26sp"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/activity_coin_detail_main_price_fiat_integer_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/nunito_light"
            android:text="932"
            android:textColor="?attr/text_primary"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/activity_coin_detail_main_price_fiat_fractional_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_light"
            android:layout_gravity="bottom"
            android:text=".92"
            android:textColor="?attr/text_primary"
            android:textSize="22sp" />
    </LinearLayout>
        <TextView
            android:id="@+id/activity_coin_detail_main_price_crypto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/nunito_light"
            android:text="฿0.0023789"
            android:textColor="?attr/text_primary"
            android:textSize="26sp" />
        <TextView
            android:id="@+id/activity_coin_detail_main_info_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="?attr/text_primary"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_light"
            android:text="+฿0.00000000 (+6.02%) for 2 months"
            />
        <TextView
            android:id="@+id/activity_coin_detail_main_info_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:textColor="?attr/text_primary"
            android:textSize="14sp"
            android:fontFamily="@font/nunito_light"
            android:text="Low: ฿0.06320000 ~ High: ฿0.08923200"
            />
        
        
        <FrameLayout
            android:id="@+id/activity_coin_detail_main_chart_container"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            >
            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/activity_coin_detail_main_chart" />

            <FrameLayout
                android:id="@+id/activity_coin_detail_main_chart_loading_container"
                android:background="?attr/chart_loading_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    >

                    <TextView
                        android:id="@+id/activity_coin_detail_main_chart_loading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:fontFamily="@font/nunito_semibold"
                        android:text="@string/chart_loading"/>

                    <ProgressBar
                        android:id="@+id/activity_coin_detail_main_chart_loading_progressbar"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_horizontal"/>
                </LinearLayout>
            </FrameLayout>


            <TextView
                android:id="@+id/activity_coin_detail_main_chart_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/chart_loading_background"
                android:gravity="center"
                android:textSize="16sp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/chart_error"/>
        </FrameLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            >

            <TextView
                android:id="@+id/activity_coin_detail_main_24h"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="?attr/chart_button_inactive"
                android:padding="12dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/chart_button_24h"/>
            <TextView
                android:id="@+id/activity_coin_detail_main_7d"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="?attr/chart_button_inactive"
                android:padding="12dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/chart_button_7d"/>
            <TextView
                android:id="@+id/activity_coin_detail_main_1m"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="?attr/chart_button_inactive"
                android:padding="12dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/chart_button_1m"/>
            <TextView
                android:id="@+id/activity_coin_detail_main_3m"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="?attr/chart_button_inactive"
                android:padding="12dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/chart_button_3m"/>
            <TextView
                android:id="@+id/activity_coin_detail_main_1y"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="?attr/chart_button_inactive"
                android:padding="12dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/chart_button_1y"/>
            <TextView
                android:id="@+id/activity_coin_detail_main_all"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:gravity="center_horizontal"
                android:fontFamily="@font/nunito_semibold"
                android:textColor="?attr/chart_button_inactive"
                android:padding="12dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/chart_button_all"/>

        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>
