<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_coin_detail_container"
    android:background="?attr/default_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="?attr/default_foreground"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_coin_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_scrollFlags="enterAlways"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/activity_coin_detail_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:layout_marginBottom="-6dp"
                    android:textSize="28sp"
                    android:fontFamily="@font/nunito_semibold"
                    android:textColor="?attr/text_primary"
                    android:text="" />

                <TextView
                    android:id="@+id/activity_coin_detail_toolbar_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:layout_marginTop="-2dp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="16sp"
                    android:fontFamily="@font/nunito_semibold"
                    android:textColor="?attr/text_secondary"
                    android:text="" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/default_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="4dp"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingEnd="4dp"
            >
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="42dp"-->
                <!--android:paddingStart="32dp"-->
                <!--android:fontFamily="@font/nunito_semibold"-->
                <!--android:text="@string/activity_coin_detail_title_basic_info"-->
                <!--android:textColor="?attr/text_secondary"-->
                <!--android:gravity="center_vertical"-->
                <!--android:textSize="14sp"/>-->
            <include layout="@layout/activity_coin_detail_basic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:paddingStart="32dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/activity_coin_detail_title_chart"
                android:textColor="?attr/text_secondary"
                android:gravity="center_vertical"
                android:textSize="14sp"/>
            <include layout="@layout/activity_coin_detail_chart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:paddingStart="32dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/activity_coin_detail_title_alerts"
                android:textColor="?attr/text_secondary"
                android:gravity="center_vertical"
                android:textSize="14sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:paddingStart="32dp"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/activity_coin_detail_title_exchanges"
                android:textColor="?attr/text_secondary"
                android:gravity="center_vertical"
                android:textSize="14sp"/>
            <include layout="@layout/activity_coin_detail_exchanges" />

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"/>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>